--- a/exercicios/modulo-01/ex001/index.html
+++ b/exercicios/modulo-01/ex001/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro exercício</title>
 </head>
@@ -9,6 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Esse é o meu primeiro documento HTML! Estou muito feliz!</p>
-    <p>Este é um momento único! Estou criando um site!</p>
+    <p>Este é um momento único estou criando um site.</p>
 </body>
 </html>
