--- a/exercicios/modulo-01/ex002/index.html
+++ b/exercicios/modulo-01/ex002/index.html
@@ -10,6 +10,22 @@
     <h1>Parágrafos e quebras de linhas</h1>
     <hr>
     <p>Você pode escrever um parágrafo de qualquer jeito. Basta colocar tudo no meio do par de tags &lt;p&gt; e &lt;/p&gt;</p>
-    <p>Se precisar quebrar o texto em algum lugar específico <br> como esse, você pode usar a tag &lt;br&gt;</p>
+    <p>Se precisar quebrar o texto em algum lugar específico <br> como esse, você pode usar a tag &lt;br&gt; <!-- Olá, comentário inserido / LT = LESS THAN / GT = GREATER THAN--></p>
+    <P>Vamos adicionar alguns símbolos especiais:
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &yen;
+        &cent;
+        &delta;
+        &Delta;
+        &uparrow;
+    </P>
+    <p>Vamos adicionar alguns emoji: 
+        &#x1F596;
+        &#x1F913;
+    </p>
 </body>
 </html>
