--- a/exercicios/modulo-01/ex007/html5.html
+++ b/exercicios/modulo-01/ex007/html5.html
@@ -2,17 +2,16 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo de Semântica</title>
     <style>
         body {
-            background-color: #8080da ;
+            background-color: #4f4ffc ;
         }
     </style>
 </head>
 <body>
-    <p>
-        Eu moro na <address>Rua dos Capixabas, 229 - Botafogo - RJ</address>
-    </p>
+   <p>Eu moro na <address>Rua dos Capixabas, 229 - Botafogo - RJ</address></p>
 </body>
 </html>
