--- a/exercicios/modulo-01/ex008/index.html
+++ b/exercicios/modulo-01/ex008/index.html
@@ -14,5 +14,19 @@
     <h2>Itálico / Ênfase</h2>
     <p>Nesta frase, temos um <i>termo em itálico</i> usando a tag I (não semântica).</p>
     <p>Nesta frase, temos um <EM>termo em ênfase</EM> usando a tag EM.</p>
+    <h2>Texto marcado</h2>
+    <p>Podemos criar também <mark style="background-color: rgb(15, 226, 15);">um texto marcado</mark> usando a tag mark.</p>
+    <p>E no outro parágrafo, temos <mark> outro texto marcado</mark> no final.</p>
+    <h2>Texto grande e pequeno</h2>
+    <p>Estamos criando um <big>texto grande</big> e um <small>texto pequeno</small> nesse parágrafo.</p>
+    <h2>Texto deletado</h2>
+    <p>Podemos marcar um <del>texto como excluído</del> para indicar que ele deve ser lido, mas não considerado</p>
+    <h2>Texto inserido</h2>
+    <p>Podemos marcar <ins>um texto como inserido</ins> para dar uma ênfase e indicar que ele foi adicionado depois.</p>
+    <p>Existe também o <u>sublinhado</u> com a tag U (não semântica)</p>
+    <h2>Texto sobrescrito</h2>
+    <p>Para inserir coisas do tipo x<sup>20</sup> + 3.</p>
+    <h2>Texto subscrito</h2>
+    <p>Para inserir coisas do tipo H<sub>2</sub>O</p>
 </body>
 </html>
