--- a/exercicios/modulo-01/ex009/index.html
+++ b/exercicios/modulo-01/ex009/index.html
@@ -2,81 +2,34 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listas</title>
+    <title>Outras formtações</title>
 </head>
 <body>
-    <h1>Trabalhando com Listas</h1>
-    <h2>Listas Ordenadas</h2>
-    <ol type="i"> <!-- 1 A a I i -->
-        <li>Acordar</li>
-        <li>Ligar para o João</li>
-        <li>Tomar café</li>
-        <li>Escovar os dentes</li>
-        <li>Ir para a faculdade</li>
-        <li>Almoçar</li>
-        <li>Ir para o trabalho</li>
-        <li>Voltar para casa</li>
-        <li>Jantar</li>
-        <li>Dormir</li>
-    </ol>
-    <h2>Listas não Ordenadas</h2>
-    <ul type="square"> <!-- disc circle square -->
-        <li>Pão</li>
-        <li>Leite</li>
-        <li>Tomate</li>
-        <li>Alface</li>
-        <li>Manteiga</li>
-        <li>Arroz</li>
-        <li>Feijão</li>
-    </ul>
-    <h2>Minhas linguagens favoritas</h2>
-    <ol>
-        <li>Antigas</li>
-        <ol type="a">
-            <li>Clipper</li>
-            <li>Visual Basic</li>
-            <li>Fortran</li>
-            <li>Delphi</li>
-        </ol>
-        <li>Novas</li>
-        <ol type="a" start="5">
-            <li>PHP</li>
-            <li>Python</li>
-            <li>JavaScript</li>
-            <li>Kotlin</li>
-        </ol>
-    </ol>
-    <h2>Meus jogos favoritos</h2>
-    <ol>
-        <li>NES</li>
-        <ul type="square">
-            <li>Mario Bros</li>
-            <ul type="circle">
-                <li>Mario Bros 3</li>
-                <li>Mario: Lost Levels</li>
-            </ul>
-            <li>Ninja Gaiden</li>
-        </ul>
-        <li>SNES</li>
-        <ul type="square">
-            <li>Mario</li>
-            <li>Donkey Kong</li>
-        </ul>
-        <li>PlayStation</li>
-        <ul type="square">
-            <li>Final Fantasy</li>
-            <li>Castlevania</li>
-        </ul>
-    </ol>
-    <h2>Lista de Definições</h2>
-    <dl>
-        <dt>HTML</dt>
-        <dd>Linguagem de marcação para a criação do conteúdo de um site.</dd>
-        <dt>CSS</dt>
-        <dd>Linguagem de marcação para a criação do design de um site.</dd>
-        <dt>JavaScript</dt>
-        <dd>Linguagem de programação para a criação de interatividade de um site.</dd>
-    </dl>
+    <h1>Outras formatações</h1>
+    <h2>Código-fonte / Pré-formatação</h2>
+    <p>O comando <code>document.getElementById('teste')</code> é escrito em linguagem JavaScript.</p>
+    <pre>
+        <code>
+num = int(input('Digite um número'))
+if num % 2 == 0:
+    print(f'O número {num} é PAR.)
+else:
+    print(f'O número {num} é ÍMPAR.)
+print('Fim do programa')
+        </code>
+    </pre>
+    <h2>Citações simples</h2>
+    <p>Como diria um pai de um amigo: <q>o computador é um burro muito rápido</q>.</p>
+    <h2>Citações completas</h2>
+    <p>Segundo Jeff Noble, no seu livro HTML para Leigos:</p>
+    <blockquote cite="https://www.google.com.br/books/edition/HTML_XHTML_e_CSS_Para_Leigos/E8ZtDwAAQBAJ?hl=pt-BR&gbpv=1&dq=html+para+leigos&printsec=frontcover">
+        A diferença entre elementos inline e um bloco de texto é importante. Os elementos HTML neste capítulo descrevem os blocos de texto.
+    </blockquote>
+    <h2>Abreviações</h2>
+    <p>Estou estudando <abbr title="HyperText Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr>. Estou adorando!</p>
+    <h2>Texto invertido</h2>
+    <p> <bdo dir="rtl">Estou aprendendo a criar coisas em HTML.</bdo></p>
 </body>
 </html>
