--- a/exercicios/modulo-01/ex015/index.html
+++ b/exercicios/modulo-01/ex015/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estilos Externos</title>
+    <title>Estilos Locais / Internos</title>
     <link rel="stylesheet" href="style.css">
     <style>
         h1 {
             text-decoration: underline;
         }
     </style>
-</head>
+ </head>
 <body>
     <h1>Capítulo 1</h1>
     <h2>Capítulo 1.1</h2>
@@ -20,6 +20,6 @@
     <h1>Capítulo 2</h1>
     <h2>Capítulo 2.1</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus blanditiis earum molestiae quasi, repellendus quis assumenda nesciunt quo, ullam animi aspernatur deserunt aliquam deleniti totam aut culpa dolorem reprehenderit facere?</p>
-    <p style="text-align: right;"><a href="pagina02.html" target="_self">Ir para a página 2</a></p>
+    <p style="text-align: right;"><a href="pagina02.html" target="_self">Ir para a página 2.</a></p>
 </body>
 </html>
