--- a/exercicios/modulo-01/ex015/pagina02.html
+++ b/exercicios/modulo-01/ex015/pagina02.html
@@ -2,14 +2,15 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Segunda página</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Segunda página</h1>
-    <h2>Teste de estilos</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, id. Quo quas provident, dolor voluptatum nemo magnam pariatur! Cumque dolorum quibusdam aperiam, nisi et nemo vel odit laborum quod similique.</p>
+    <h2>Teste de Estilos</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quidem, incidunt commodi dolorem laborum recusandae unde neque minima reprehenderit quisquam? Harum maiores sequi ad consequatur adipisci ratione ea magnam incidunt.</p>
     <p><a href="index.html">Voltar</a></p>
 </body>
 </html>
