--- a/android.html
+++ b/android.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como surgiu o mascote do Android</title>
-    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="shortcut icon" href="exercicios/modulo-02/desafio010/imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="exercicios/modulo-02/desafio010/estilo/style.css">
 </head>
 <body>
     <header>
@@ -30,8 +30,8 @@
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" class="externo">Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" class="externo">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
             <picture>
-                <source media="(max-width: 600px)" srcset="imagens/dan-droids-pq.png">
-                <img src="imagens/dan-droids.png" alt="Primeiro mascote do android">
+                <source media="(max-width: 600px)" srcset="exercicios/modulo-02/desafio010/imagens/dan-droids-pq.png">
+                <img src="exercicios/modulo-02/desafio010/imagens/dan-droids.png" alt="Primeiro mascote do android">
             </picture>
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
@@ -41,8 +41,8 @@
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/" target="_blank" class="externo">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
             <picture>
-                <source media="(max-width: 600px)" srcset="imagens/irina-blok-pq.jpg">
-                <img src="imagens/irina-blok.jpg" alt="Irina Blok, criadora do Bugdroid">
+                <source media="(max-width: 600px)" srcset="exercicios/modulo-02/desafio010/imagens/irina-blok-pq.jpg">
+                <img src="exercicios/modulo-02/desafio010/imagens/irina-blok.jpg" alt="Irina Blok, criadora do Bugdroid">
             </picture>
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
@@ -85,7 +85,7 @@
         </article>
     </main>
     <footer>
-        Site criado por <a href="https://github.com/gustavoguanabara/gustavoguanabara.github.io">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/user/cursosemvideo" target="_blank">CursoemVideo</a>.
+        Site criado por <a href="https://github.com/gustavoguanabara/gustavoguanabara.github.io">Rafael Meireles</a> durante o curso de HTML5 e CSS3, para acessar a playlist completa > <a href="https://www.youtube.com/watch?v=Ejkb_YpuHWs&list=PLHz_AreHm4dkZ9-atkcmcBaMZdmLHft8n" target="_blank">CursoemVideo</a>.
     </footer>
 </body>
 </html>
